feat:add thobber

--- a/vite-project/src/styles/main.scss
+++ b/vite-project/src/styles/main.scss
@@ -1,3 +1,4 @@
 @import './normalize.scss';
 @import './app.scss';
 @import '../pages/mainPage.scss';
+@import '../components/thobber/thobber.scss';
