--- a/vite-project/src/components/throbber/throbber.scss
+++ b/vite-project/src/components/throbber/throbber.scss
@@ -1,12 +1,14 @@
 .thobber__wrapper {
-    position: absolute;
+    position: fixed;
+    top: 0;
     width: 100%;
     height: 100%;
     background-color: black;
-    opacity: 0.7;
     display: flex;
+    overflow: hidden;
     justify-content: center;
     align-items: center;
+    z-index: 10;
 }
 .thobber {
     background-color: gray;
