feat:add error boundary modal

--- a/vite-project/src/styles/main.scss
+++ b/vite-project/src/styles/main.scss
@@ -2,3 +2,4 @@
 @import './app.scss';
 @import '../pages/mainPage.scss';
 @import '../components/throbber/throbber.scss';
+@import '../components/errorBondary/errorBondary.scss';
